GNOME Bugzilla – Bug 686305
gnome-themes-standard 3.6.1 fails to build with Quartz backend
Last modified: 2012-10-17 20:59:07 UTC
Latest release 3.6.1 fails to build on OS X if GTK2 and/or GTK3 are installed with the Quartz backend: - configure.ac (line 65) checks explicitly for 'gdk-x11-2.0', but the Quartz backend of GTK2 installs 'gdk-quartz-2.0' instead - src/adwaita_engine.c: includes header file only available with X11 backend of GTK+ (<gdk/gdkx.h>), without further testing. - themes/Adwaita/gtk-2.0/adwaita_engine.c: includes header file only available with X11 backend of GTK2 (<gdk/gdkx.h>), without testing e.g. with '#ifdef GDK_WINDOWING_X11'. AFAICT (I'm not a developer myself) a few additional changes are required for both theme engines to compile without X11 backend. (gnome-themes-standard 3.6.0.2 built ok out-of-the-box, with the same setup on OS X 10.7.4)
I don't have an OSX machine to test this currently; could you please test if the attached patch works for you? It's against git master (but it can be easily backported on top of 3.6.1). Thanks.
Created attachment 226669 [details] [review] patch
Created attachment 226687 [details] [review] Minimally modified version of the patch to apply against tarball of v3.6.1 Many thanks for your prompt response and the patch, much appreciated! To make the patch apply to the sources from the 3.6.1 tarball, I had to change the path for the GTK3 theme engine file to 'src/adwaita_engine.c' (modified version attached). Other than that, the patch applied ok, building was successful, and the demo apps as well as Inkscape trunk (with GTK2 and with GTK3 (still experimental)) load and use the new Adwaita theme engine ok.
Thanks, I pushed the patch to both the master and gnome-3-6 git branches now.