build: fix the build for non-X11 environments

https://bugzilla.gnome.org/show_bug.cgi?id=686305